# opencode-updater

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  Scratch.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
openspec/: project.md
openspec/changes/expand-platform-support/: design.md  proposal.md
openspec/changes/expand-platform-support/specs/platform-detection/: spec.md
src/: lib.rs  main.rs
tests/: integration_tests.rs
