[package]
name = "opencode-updater"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "A CLI tool for updating opencode installations"
keywords = ["opencode", "updater", "cli", "automation"]
repository = "https://github.com/CodingInCarhartts/opencode-updater"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
zip = "0.6"
serde_json = "1.0"
tempfile = "3.10"
sha2 = "0.10"

[dev-dependencies]
mockito = "1.2"
